k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: titanic-api
  labels:
    name: titanic-api
    app: titanic-api
