k8s/base/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: titanic-api-service
  namespace: titanic-api
  labels:
    app: titanic-api
spec:
  selector:
    app: titanic-api
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
